# messenger

api/: main.py  pyproject.toml  settings.py  test.py  utils.py
api/models/: __init__.py  conversations.py  groups.py  messages.py  users.py
api/routers/: conversations.py  groups.py  messages.py  users.py
api/schemas/: conversation.py  message.py  user.py
api/services/: conversations.py  users.py
api/utils/: __init__.py  conversations.py  users.py
web/: package-lock.json  package.json  vite.config.js
web/src/: App.vue  main.js
web/src/components/: About.vue  Conversations.vue  Home.vue  Login.vue
web/src/components/chat/: ChatBox.vue  ConversationList.vue  Messages.vue  SideDrawer.vue  SingleChat.vue  UserList.vue
web/src/styles/: app.css
