[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["quan"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
peewee = "^3.14.10"
psycopg2-binary = "^2.9.3"
pylint = "^2.17.3"
poetry = "^1.4.2"
pydantic = "^1.10.7"
pillow = "^9.5.0"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
